--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,14 @@ body {
 	/* PinkShaow_01 */
 	box-shadow: 0px 6px 0px 0px #ff3284;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-	padding: .5rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0.5rem;
+}
+
+@theme {
+	--breakpoint-xxs: 357px;
+	--breakpoint-2xl: 100rem;
+	--breakpoint-3xl: 120rem;
 }
