--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@ body {
 	background-color: #0f0f0f;
 }
 
+button {
+  cursor: pointer;
+}
+
+img {
+  pointer-events: none;
+  user-select: none;
+}
+
 .container {
   border-radius: 0.625rem;
   border: 3px solid #fff;
