--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ img {
 
 @theme {
   --breakpoint-xxs: 357px;
+  --breakpoint-xs: 420px;
   --breakpoint-2xl: 100rem;
   --breakpoint-3xl: 120rem;
 }
