--- a/src/styles/portfolio-container.scss
+++ b/src/styles/portfolio-container.scss
@@ -11,7 +11,7 @@
 
 		transition: transform 0.2s ease-out;
 		will-change: transform;
-    z-index: -1;
+		z-index: -1;
 	}
 
 	.down-icon {
@@ -19,6 +19,8 @@
 		bottom: 0;
 		transform: translateY(-1rem);
 		width: clamp(1rem, 3vw, 2rem);
+
+		place-items: center;
 
 		pointer-events: none;
 		user-select: none;
