--- a/src/styles/portfolio-container.scss
+++ b/src/styles/portfolio-container.scss
@@ -1,11 +1,12 @@
 .portfolio-wrapper {
 	display: grid;
 	place-items: center;
+	min-height: 100vh;
+	min-height: 100dvh; // Fixes iOS Safari cropping
 
 	.trace {
 		position: absolute;
 		width: clamp(30rem, 40vw, 70rem);
-		max-width: 100vw;
 
 		pointer-events: none;
 		user-select: none;
@@ -15,29 +16,28 @@
 		z-index: -1;
 	}
 
-	.down-icon {
-		position: absolute;
-		bottom: 0;
-		transform: translateY(-1rem);
-		width: clamp(1rem, 3vw, 2rem);
-
-		place-items: center;
-
-		pointer-events: none;
-		user-select: none;
-	}
-
-	/* Top right trace */
 	.trace-top-right {
 		top: 0;
 		right: 0;
-		transform: translate(40%, 10%);
+		transform: translate(
+			clamp(5rem, 10vw, 12rem),
+			clamp(0.5rem, 1vw, 2rem)
+		);
 	}
 
-	/* Bottom left trace */
 	.trace-bottom-left {
 		bottom: 0;
 		left: 0;
-		transform: translate(-40%, 10%);
+		transform: translate(
+			clamp(-12rem, -10vw, -12rem),
+			clamp(-6rem, -2vw, -4rem)
+		);
+	}
+
+	.down-icon {
+		position: absolute;
+		bottom: 0;
+		transform: translateY(clamp(-6rem, -6vh, -6rem));
+		width: clamp(1rem, 3vw, 2rem);
 	}
 }
