--- a/src/styles/portfolio-container.scss
+++ b/src/styles/portfolio-container.scss
@@ -39,5 +39,7 @@
 		bottom: 0;
 		transform: translateY(clamp(-6rem, -6vh, -6rem));
 		width: clamp(1rem, 3vw, 2rem);
+		display: grid;
+		place-items: center;
 	}
 }
